# pluginlake

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  zensical.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  docker-build.yaml  security.yaml
config/dagster/: dagster.yaml  workspace.yaml
deploy/compose/: .env.example  .env.production.example  docker-compose.dev.yaml  docker-compose.yaml
deploy/docker/: dagster-webserver.Dockerfile  dagster.Dockerfile  dagster.dev.Dockerfile  pluginlake.Dockerfile  pluginlake.dev.Dockerfile
docs/: develop-guidelines.md  external-repos-reference.md  stories-increment-1.md  technisch-arc-overzicht.md
docs/decisions/: README.md  adr-001-asset-architecture.md  adr-002-ducklake-data-catalog.md  adr-002-omop-storage-architecture.md  adr-003-ducklake-data-catalog.md  adr-004-data-organization.md
docs/guides/: api.md  docker.md  getting-started.md  using-as-package.md
examples/: titanic.py
external_repos/dagster-data-station/: README.md  cbs_load_job.yaml  dagster.yaml  pyproject.toml
external_repos/dagster-data-station/notebooks/: cbs.py
external_repos/dagster-data-station/src/dagster_data_station/defs/: assets.py  resources.py
external_repos/dhd-pluginlake/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  test_client.ipynb
external_repos/dhd-pluginlake/OLD/plugindb/: main.py
external_repos/dhd-pluginlake/OLD/plugindb/api/: auth.py  routes.py
external_repos/dhd-pluginlake/OLD/plugindb/core/: aioc.py  config.py  parquet.py  security.py  setup.py
external_repos/dhd-pluginlake/OLD/plugindb/utils/: file_utils.py
external_repos/dhd-pluginlake/src/pluginlake/api/: auth.py
external_repos/dhd-pluginlake/src/pluginlake/core/: lake_setup.py
external_repos/dhd-pluginlake/src/pluginlake/utils/: logger.py
external_repos/duckbtlake/notebooks/: rw-test.ipynb
external_repos/duckbtlake/src/duckbtlake/: db.py
external_repos/duckbtlake/src/duckbtlake/utils/: extract_code_system.py
external_repos/duckbtlake/src/ducklake/: .user.yml  dbt_project.yml  profiles.yml
external_repos/duckbtlake/src/ducklake/macros/: duckdb__drop_relation.sql
external_repos/duckbtlake/src/ducklake/models/: sources.yml  stg_admissions.sql  stg_diagnoses.sql
external_repos/plugin-blob-proxy/: README.md  docker-compose.yaml
external_repos/plugin-blob-proxy/dockerfiles/: blobprox.Dockerfile  keygen.Dockerfile
external_repos/plugin-blob-proxy/notebooks/: test.ipynb  test_blob.ipynb
external_repos/plugin-blob-proxy/src/blobprox/: config.py  main.py
external_repos/plugin-blob-proxy/src/blobprox/utils/: blob.py  crypto.py  generate_keys.py  helpers.py
external_repos/pluginSHIRE/: README.md
external_repos/pluginSHIRE/containers/apache-server/: Dockerfile  docker-compose.yaml  httpd-config.conf
external_repos/pluginSHIRE/containers/duckdb-datalake/: Dockerfile  docker-compose.yaml  main.py  requirements.txt  test_client.ipynb
external_repos/pluginSHIRE/containers/v6-http-test/: .copier-answers.yml  .gitignore  Dockerfile  Makefile  README.md  algorithm_store.json  requirements.txt  setup.py
external_repos/pluginSHIRE/containers/v6-http-test/http-folder-test/: partial.py
external_repos/pluginSHIRE/containers/webdav-network/: docker-compose.yaml  readme.md
external_repos/pluginSHIRE/containers/webdav-network/TEST_DATA_MOUNT/: testfile.txt
external_repos/pluginSHIRE/containers/webdav-network/apache-server/: Dockerfile  httpd-config.conf
external_repos/pluginSHIRE/containers/webdav-network/webdav-client/: Dockerfile  fs_utils.py  requirements.txt  webdav_client.py
external_repos/pluginSHIRE/notebooks/: cleanup_thesauri.ipynb  pyiceberg.ipynb  test_http_folders.ipynb
notebooks/: explore_ducklake.py  omop_example.py  retrieve_synthea.py
planning/: future-features.md
src/pluginlake/: __init__.py  __main__.py  config.py  definitions.py
src/pluginlake/api/: __init__.py  app.py  config.py  endpoints.py  exceptions.py  middleware.py  security.py
src/pluginlake/api/routers/: health.py  ingest.py
src/pluginlake/api/services/: ingestion.py
src/pluginlake/assets/: __init__.py
src/pluginlake/core/: __init__.py  config.py  dagster_client.py
src/pluginlake/core/ducklake/: __init__.py  config.py  io_manager.py  setup.py
src/pluginlake/core/storage/: __init__.py  base.py  layers.py  local.py
src/pluginlake/definitions/: __init__.py  fhir.py  omop.py
src/pluginlake/omop/: __init__.py  config.py  loader.py  queries.py  schemas.py  storage.py  validation.py
src/pluginlake/utils/: __init__.py  logger.py
tests/: conftest.py
tests/integration/: test_synthea.py
tests/unit/pluginlake/: test_config.py  test_main.py
tests/unit/pluginlake/api/: test_api.py  test_ingest.py
tests/unit/pluginlake/core/ducklake/: test_io_manager.py
tests/unit/pluginlake/core/storage/: test_layers.py
tests/unit/pluginlake/omop/: test_loader.py  test_queries.py  test_storage.py  test_validation.py
tests/unit/pluginlake/utils/: test_logger.py
