[project]
name = "dagster-data-station"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "adbc-driver-manager>=1.8.0",
    "cbsodata>=1.3.5",
    "dagster==1.11.15",
    "dagster-duckdb>=0.27.15",
    "dagster-duckdb-polars>=0.27.15",
    "dagster-polars>=0.27.7",
    "duckdb>=1.4.1",
    "polars[pyarrow]>=1.34.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_data_station"
registry_modules = [
    "dagster_tutorial.components.*",
]


